@@ -122,8 +122,10 @@ protected:
     } comboModel;
 
     Glib::RefPtr<Gtk::ListStore> refTableModel;
+    bool ignoreColumnClicked; //HACK: Prevents that onColumnClicked() gets called multiple times or at times where it is not desired
 
     void onAllRegionsCheckBoxToggled();
+    void onColumnClicked();
     void refreshManager();
     void addDimension();
     void removeDimension();
